# monumenten

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cicd.yml  publish-to-pypi.yml
docs/: README_LINK.md  conf.py  index.md  requirements.txt  tutorial.ipynb
src/monumenten/: __init__.py  _processing.py  _version.py  client.py  main.py  verblijfsobjecten.csv
src/monumenten/_api/: _cultureel_erfgoed.py  _kadaster.py
src/monumenten/api/: cultureel_erfgoed.py  kadaster.py
src/monumenten/utils/: geometry.py
tests/: test_client.py
