[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "monumenten"
dynamic = ["version"]
description = "Checkt op basis van BAG verblijfsobject-ids of het verblijfsobject een monument en/of beschermd stadsgezicht is."
authors = [
    {name = "Woonstad Rotterdam", email = "info@woonstadrotterdam.nl"},
    {name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl"},
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"}
]
keywords = ["monument", "bag", "stadsgezicht", "monumentenregister", "beschermd"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9.5"
license = {file = "LICENSE"}
dependencies = [
    "aiohttp>=3.10.10",
    "Shapely>=2.0.6",
    "tqdm>=4.66.5",
    "pandas>=2.0.0",
    "geopandas>=1.0.1"
]

[project.optional-dependencies]
test = [
    "pre-commit==3.*",
    "pytest==8.*",
    "pytest-cov==5.*",
    "pytest-asyncio==0.24.*"
]
dev = [
    "monumenten[test]",
    "ruff==0.4.8"
]

[tool.pytest.ini_options]
addopts = "--cov=monumenten --cov-report term --cov-report lcov:lcov.info"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    # omit generated code
    "src/monumenten/_version.py",
]

[tool.setuptools_scm]
version_file = "src/monumenten/_version.py"

[project.urls]
Homepage = "https://github.com/woonstadrotterdam/monumenten"
Issues = "https://github.com/woonstadrotterdam/monumenten/issues"

[tool.setuptools]
packages = ["monumenten"]
package-dir = {"" = "src"}
